# watcherobot

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_cn.md  README_zh.md  SECURITY.md  build_release.bat  build_release.sh  flash.bat  flash.sh
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build.yml
Firmware/MVP-W/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
Firmware/MVP-W/docs/: ARCHITECTURE.md  COMMUNICATION_PROTOCOL.md
Firmware/MVP-W/firmware/mcu/main/: CMakeLists.txt
Firmware/MVP-W/firmware/mcu/main/action/: action.h
Firmware/MVP-W/firmware/mcu/main/ble/: ble.c
Firmware/MVP-W/firmware/mcu/main/command/: command.c  command.h
Firmware/MVP-W/firmware/mcu/main/servo/: servo.c  servo.h
Firmware/MVP-W/firmware/mcu/main/uart/: uart_handler.h
Firmware/MVP-W/firmware/s3/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  boot_animation.c  boot_animation.h  button_voice.c  button_voice.h  discovery_client.c  discovery_client.h  display_ui.c  display_ui.h  emoji_anim.c  emoji_anim.h  emoji_png.c  emoji_png.h  hal_audio.c  hal_audio.h  hal_button.c  hal_button.h  hal_display.c  hal_display.h  hal_opus.c  hal_opus.h  hal_uart.c  hal_uart.h  hal_wake_word.c  hal_wake_word.h  idf_component.yml  uart_bridge.c  uart_bridge.h  wifi_client.c  wifi_client.h  ws_client.c  ws_client.h  ws_handlers.c  ws_handlers.h  ws_router.c  ws_router.h
Firmware/MVP-W/firmware/s3/test_host/: CMakeLists.txt  test_button_voice.c  test_display_ui.c  test_uart_bridge.c  test_wake_word.c  test_ws_router.c
Firmware/MVP-W/releases/: README.md
Firmware/MVP-W/server/: main.py  requirements.txt  websocket_server.py
Hardware/: PCB.pcbdoc  PCB.schdoc  README.md
Hardware/BOM/: BOM.xls
Hardware/Gerber/: Drill_NPTH_Through.DRL  Drill_PTH_Through.DRL  Drill_PTH_Through_Via.DRL  FlyingProbeTesting.json  Gerber_BoardOutlineLayer.GKO  Gerber_BottomLayer.GBL  Gerber_BottomPasteMaskLayer.GBP  Gerber_BottomSilkscreenLayer.GBO  Gerber_BottomSolderMaskLayer.GBS  Gerber_DocumentLayer.GDL  Gerber_DrillDrawingLayer.GDD  Gerber_InnerLayer1.G1  Gerber_InnerLayer2.G2  Gerber_TopLayer.GTL  Gerber_TopPasteMaskLayer.GTP  Gerber_TopSilkscreenLayer.GTO  Gerber_TopSolderMaskLayer.GTS
Hardware/RobotModel/: 3D_PCB3_灯板_Layout.step  底座.step  支架前盖.step  支架后壳.step  机身.step  机身R.stp  机身加灯带.step  灯带.step  背板.step
WatcheRobotAPP/: App.tsx  CLAUDE.md  CONTRIBUTING.md  README.md  README_zh.md  app.json  package.json  tsconfig.json
WatcheRobotAPP/android/: settings.gradle
WatcheRobotAPP/android/app/: build.gradle
WatcheRobotAPP/docs/: MOTION_SEND_LOGIC.md
WatcheRobotAPP/ios/: Podfile
WatcheRobotAPP/ios/WatcherRobotAPP/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
WatcheRobotAPP/ios/WatcherRobotAPP.xcodeproj/: project.pbxproj
WatcheRobotAPP/src/assets/: Execute30fps8s.json  fail30fps4s.json  sleep30fps8s-2.json  thinking30fps6s.json  思考 - 关键_watcher_animation.json  测试 - X_watcher_animation.json  睡觉 - 关键_watcher_animation.json
WatcheRobotAPP/src/navigation/: AppNavigator.tsx
WatcherServer/: .gitignore  DEVELOPMENT.md  README.md  README_CN.md  STARTUP_GUIDE.md  environment.yml  main.py  requirements.txt  start.bat  start.sh  test_client.html
WatcherServer/config/: llm_think_prompt.txt  openclaw_prompt.txt
WatcherServer/docs/: AI_CONTEXT.md  AI_CONTEXT_CN.md  ALIYUN_ASR.md  ALIYUN_ASR_CN.md  ESP32_SERVICE_DISCOVERY.md  ESP32_SERVICE_DISCOVERY_CN.md  openclaw_tmux_design.md  openclaw_tmux_design_CN.md  websocket_message_protocol.md  websocket_message_protocol.textClipping  websocket_message_protocol_CN.md
WatcherServer/output/: tts_test_1.pcm  tts_test_2.pcm  tts_test_3.pcm  tts_test_4.pcm
WatcherServer/src/: __init__.py  main.py
WatcherServer/tests/: aliyunSTT.py  convert_pcm_to_wav.py  huoshanTTS.py  test_aliyun_asr.py  test_clean_text.py  test_huoshan_tts.py  test_llm.py
docs/: UART_PROTOCOL.md  mg90s-servo.md
main/: CMakeLists.txt  app_main.c
main/action/: action.c
main/ble/: ble.c  ble.h
main/command/: command.c
main/servo/: servo.c  servo.h
main/uart/: uart_handler.c
release/: README.md
(+100 files in other folders)
